--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Travels</title>
+    <title>Travels - Adventures all over the world!</title>
     <meta name="description" content="">
     <link rel="stylesheet" href="css/app.css">
 </head>
